--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,7 +3,7 @@
 body {
   background-color: #fff;
   padding:50px;
-  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 14px/1.5 "Microsoft YaHei", "FZSong", FZSong, Arial, sans-serif;
   color:#595959;
   font-weight:400;
 }
